= 2.0.5 =
# Fixed
- changed so that the recipient name is taken from the shipping information
- fixed Omniva info saving if Order history data not exists

# Improved
- changed the name of the generate manifest button and added a description
- added missing LT translations
- added error message when shipment sending method not available

= 2.0.4 =
# Fixed
- fixed address geocode hardcode
- fixed a map button show by settings value
- fixed a carrier selection in Omniva block on Order edit page, when carrier is disabled
- fixed the error on Checkout page that occurs when the country code is lowercase
- fixed Omniva block showing in old Orders, after Omniva carrier edit

# Improved
- unified structure of JS variables in the parcel terminal carrier template

# Updated
- API library to 1.0.10

= 2.0.3 =
# Fixed
- fixed label generation ajax error in order edit page
- in Omniva Orders page order link moved from customer to id
- in Omniva Orders page renamed manifest generation button, moved to right side and added additional button above table
- in Omniva Orders page fixed JS file link, when website is in subfolder
- in Omniva Orders page changed Orders list order by ID only

# Improved
- added error message in order edit page, when label generation ajax got error
- added a option to disable return code sending to customer

# Updated
- API library to 1.0.7

= 2.0.2 =
# Fixed
- fixed reference number generation, when order ID is less then 10

# Updated
- API library to 1.0.6

= 2.0.1 =
# Updated
- API library to 1.0.5
- Added new logo

# Improved
- Added save of initial order data

= 2.0.0 =
 - Reworked module to use API library for better maintenance.
 - Removed Cart override and cart table alterations.
 - Remade ajax controller to admin type.
 - Various code clean-ups and optimizations.
 - Compatibility along 1.6 - 1.7 versions.

# Fixed
- Default language code select in Checkout page
- Terminal selection load in OnePage checout page

= 1.1.8 =

# Fixed